# rust-micro-service

doc/微服务/: 服务发现-缓存服务.md  架构说明.md
doc/数据存储/: 查询服务接口说明.md
src/config-parse/: Cargo.toml
src/config-parse/src/json/: stream.rs
src/consul-client/: Cargo.toml
src/consul-client/example/agent/: Cargo.toml
src/consul-client/example/agent/src/: main.rs  services.rs
src/consul-client/src/: lib.rs
src/consul-client/src/agent/: mod.rs  services.rs
src/consul-client/src/http/: sender.rs
src/data-service/consul_client/src/agent/: services.rs
src/data-service/consul_client/src/client/: client.rs
src/data-service/consul_client/src/structs/: agent.rs
src/data-service/handle_server/rust/: Cargo.toml
src/data-service/handle_server/rust/examples/basic/: Cargo.toml
src/data-service/handle_server/rust/examples/basic/src/: main.rs
src/data-service/handle_server/rust/src/: lib.rs
src/data-service/handle_server/rust/src/client/: http.rs  mod.rs
src/data-service/handle_server/rust/src/consts/: client.rs
src/data-service/handle_server/rust/src/register/: consul.rs  mod.rs
src/data-service/handle_server/rust/src/structs/: start.rs
src/data-service/query_client/rust/: Cargo.toml
src/data-service/query_client/rust/examples/basic/: Cargo.toml
src/data-service/query_client/rust/examples/basic/src/: main.rs
src/data-service/query_client/rust/src/client/: dispatch.rs  mod.rs
src/data-service/query_client/rust/src/consts/: proto.rs
src/data-service/query_client/rust/src/select/: handle_times.rs
src/data-service/query_client/rust/src/sender/: http.rs  https.rs  mod.rs  rpc.rs  tcp.rs
src/data-service/query_client/rust/src/structs/: client.rs  sender.rs  start.rs
src/data-service/query_client/rust/src/tools/: addr.rs
src/data-service/query_server/: Cargo.toml
src/data-service/query_server/example_resource/: dynamic.cfg
src/data-service/query_server/src/: lib.rs  main.rs
src/data-service/query_server/src/consts/: client.rs  proto.rs
src/data-service/query_server/src/guard/: consul.rs  mod.rs
src/data-service/query_server/src/query/: http.rs  mod.rs
src/data-service/query_server/src/select/: handle_times.rs  mod.rs  random.rs
src/data-service/query_server/src/session/: consul.rs
src/data-service/query_server/src/structs/: heart.rs  mod.rs  proto.rs  query.rs  service.rs  start.rs
src/register-center-buffer/rust/: Cargo.toml
src/register-center-buffer/rust/src/: lib.rs
src/register-center-buffer/rust/src/buffer/: client.rs
src/register-center-buffer/rust/src/consts/: proto.rs
src/register-center-buffer/rust/src/register/: manager.rs  mod.rs  zookeeper.rs
src/register-center-buffer/rust/src/service/: manager.rs  min_connect.rs
src/register-center-buffer/rust/src/structs/: buffer.rs  config.rs  proto.rs  service.rs
src/register-center-buffer/rust/src/tools/: local_ip.rs
src/server-service/register_buffer_client/rust/: Cargo.toml
src/server-service/register_buffer_client/rust/examples/basic/: Cargo.toml
src/server-service/register_buffer_client/rust/examples/basic/src/: main.rs
src/server-service/register_buffer_client/rust/src/: lib.rs
src/server-service/register_buffer_client/rust/src/client/: mod.rs
src/server-service/register_buffer_client/rust/src/consts/: proto.rs
src/server-service/register_buffer_client/rust/src/sender/: http.rs  https.rs  manager.rs  mod.rs  rpc.rs  tcp.rs
src/server-service/register_buffer_client/rust/src/structs/: mod.rs  proto.rs  start.rs
src/server-service/register_buffer_server/: Cargo.toml
src/server-service/register_buffer_server/src/: lib.rs  main.rs
src/server-service/register_buffer_server/src/buffer/: client.rs  memory.rs  mod.rs  server.rs
src/server-service/register_buffer_server/src/consts/: proto.rs
src/server-service/register_buffer_server/src/proto/: http.rs  mod.rs
src/server-service/register_buffer_server/src/register/: consul.rs  manager.rs  mod.rs
src/server-service/register_buffer_server/src/service/: manager.rs  min_connect.rs  mod.rs  random.rs
src/server-service/register_buffer_server/src/structs/: buffer.rs  config.rs  mod.rs  proto.rs  service.rs  start.rs
src/server-service/register_buffer_server/src/tools/: mod.rs
src/service-select-client/rust/examples/basic/: Cargo.toml
src/service-select-client/rust/examples/basic/src/: main.rs
src/service-select-client/rust/src/: lib.rs
src/service-select-client/rust/src/client/: mod.rs
src/service-select-client/rust/src/select/: mod.rs
src/service-select-client/rust/src/sender/: https.rs  manager.rs  mod.rs  rpc.rs
src/service-select-client/rust/src/structs/: mod.rs
src/service_select_client/rust/: Cargo.toml
src/service_select_client/rust/src/select/: random.rs
src/service_select_client/rust/src/sender/: http.rs
src/service_select_client/rust/src/session/: consul.rs  mod.rs
src/service_select_client/rust/src/structs/: service.rs  start.rs
