[package]
name = "query_server"
version = "0.1.0"
authors = ["MwlLj <731025894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rand]
version = "*"

[dependencies.quick_sort]
version = "*"

[dependencies.rust_parse]
git = "https://github.com/MwlLj/rust_parse"
version = "0.1.9"

[dependencies.tiny_http]
version = "*"

[dependencies.consul_client]
path = "../consul_client"
version = "*"

[dependencies.serde]
version = "*"

[dependencies.serde_json]
version = "*"

[dependencies.config]
git = "https://github.com/MwlLj/rust-libs"
version = "0.1.1"

[dependencies.uuid]
version = "*"
features = ["v4"]
