[package]
name = "handle_server"
version = "0.1.0"
authors = ["MwlLj <731025894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.consul_client]
path = "../../../consul-client"

[dependencies.serde]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.config]
git = "https://github.com/MwlLj/rust-libs"
version = "0.1"

[dependencies.uuid]
version = "*"
features = ["v4"]
