[package]
name = "query_client"
version = "0.1.0"
authors = ["MwlLj <731025894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consul_client = {path = "../../consul_client"}
quick_sort = "0.2"
rand = "0.7"
serde = "1.0"
serde_json = "1.0"
reqwest = "0.9"
