[package]
name = "basic"
version = "0.1.0"
authors = ["MwlLj <731025894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.register_buffer_client]
path = "../.."

[dependencies.service_select_client]
path = "../../../../../service-select-client/rust"

[dependencies.rust_parse]
git = "https://github.com/MwlLj/rust_parse"
version = "*"
